Support RANDR 1.2 gamma fade

In order for fading with X.org randr 1.2 drivers to work properly,
the screensaver should use randr to fade the crtcs.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=597874